--- a/src/app/coursecontent/coursecontent.page.html
+++ b/src/app/coursecontent/coursecontent.page.html
@@ -124,7 +124,7 @@
     </ion-item>
 	<ion-item detail="false" href="#">
       <ion-label>
-        <h5>c.	Naming conventions</h5>
+        <h5>c.	Naming conventions.</h5>
       </ion-label>
     </ion-item>
    
